; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_move.c_validate_cursor.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_move.c_validate_cursor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@curwin = common dso_local global %struct.TYPE_3__* null, align 8
@VALID_WCOL = common dso_local global i32 0, align 4
@VALID_WROW = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @validate_cursor() #0 {
  %1 = load %struct.TYPE_3__*, %struct.TYPE_3__** @curwin, align 8
  %2 = call i32 @check_cursor_moved(%struct.TYPE_3__* %1)
  %3 = load %struct.TYPE_3__*, %struct.TYPE_3__** @curwin, align 8
  %4 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @VALID_WCOL, align 4
  %7 = load i32, i32* @VALID_WROW, align 4
  %8 = or i32 %6, %7
  %9 = and i32 %5, %8
  %10 = load i32, i32* @VALID_WCOL, align 4
  %11 = load i32, i32* @VALID_WROW, align 4
  %12 = or i32 %10, %11
  %13 = icmp ne i32 %9, %12
  br i1 %13, label %14, label %17

14:                                               ; preds = %0
  %15 = load i32, i32* @TRUE, align 4
  %16 = call i32 @curs_columns(i32 %15)
  br label %17

17:                                               ; preds = %14, %0
  ret void
}

declare dso_local i32 @check_cursor_moved(%struct.TYPE_3__*) #1

declare dso_local i32 @curs_columns(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
